js-our-team : milestone 2, Bonus 1, Bonus 2. (card senza style)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
     
     <div id="database">
-        
+        <h1>Our Team</h1>
+        <ul class="lista">
+
+        </ul>
     </div>
 
     <script src="app.js"></script>
